default/graylog/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: graylog3
spec:
  type: ClusterIP
  selector:
    service: graylog-deploy
  ports:
  - name: "9000"
    port: 9000
    targetPort: 9000
  - name: "12201"
    port: 12201
    targetPort: 12201
  - name: "filebeat"
    port: 5044
    protocol: TCP
